--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,32 +9,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+
+      - run: npm install
+      - run: npm run build
+
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }} 
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           known_hosts: unnecessary
 
       - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-        
-      - uses: actions/checkout@v2
+        run: ssh-keyscan -H ${{ secrets.SSH_HOST }}  >> ~/.ssh/known_hosts
 
-      - name: Deploying
+      - name: Deploy with rsync
+        run: rsync -avz -e "ssh ./dist/ ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:${{ secrets.APP_PATH }}
+
+      - name: Restart Node Server
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-       
+
           script: |
             cd ${{ secrets.APP_PATH }}
-            git checkout main
-            git fetch --all
-            git reset --hard origin/main
-            npm install
-            npm run build
-            # Restart server
-            pm2 kill
-            pm2 start "npm run start"
-
+            git fetch origin main
+            git reset --hard FETCH_HEAD
+            git clean -d -f --exclude secrets
+            npm install --production
+            chown $(whoami) . # PM2 doesn't recognize root user from Github Actions
+            npm run serve
