--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,8 +10,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '>=16.15.0'
       - run: npm install
       - run: npm run build
 
