style structure refactor, icons

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "dev": "vite",
     "build": "vite build --base=/",
     "serve": "vite preview",
+    "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue}\" --ignore-path .gitignore",
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "lint": "yarn lint:format && yarn lint:fix "
   },
-  "_pre-commit": "lint",
+  "pre-commit": "lint",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "js-cookie": "^3.0.1",
@@ -54,6 +56,10 @@
     "pre-commit": "^1.2.2",
     "prettier": "^2.8.7",
     "sass": "^1.60.0",
+    "stylelint": "^15.3.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^31.0.0",
     "typescript": "^5.0.3",
     "unplugin-auto-import": "^0.15.2",
     "vite": "^4.2.1",
