--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "serve": "vite preview",
     "lint:js:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
-    "lint:style": "stylelint \"**/*.{css,scss}\" --ignore-path .gitignore",
     "lint:style:fix": "stylelint \"**/*.{css,scss}\" --fix --ignore-path .gitignore",
     "lint": "yarn lint:format && yarn lint:js:fix && yarn lint:style:fix"
   },
-  "_pre-commit": "lint",
+  "pre-commit": "lint",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
     "ofetch": "^1.0.1",
     "react": "^18.2.0",
@@ -44,8 +44,8 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^3.1.0",
-    "@vitejs/plugin-react-swc": "^3.2.0",
-    "eslint": "^8.37.0",
+    "@vitejs/plugin-react-swc": "^3.3.0",
+    "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
@@ -53,12 +53,12 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "pre-commit": "^1.2.2",
     "prettier": "^2.8.7",
-    "sass": "^1.60.0",
-    "stylelint": "^15.3.0",
-    "stylelint-config-prettier": "^9.0.5",
+    "rollup-plugin-visualizer": "^5.9.0",
+    "sass": "^1.61.0",
+    "stylelint": "^15.4.0",
     "stylelint-config-standard-scss": "^7.0.1",
     "stylelint-order": "^6.0.3",
-    "typescript": "^5.0.3",
+    "typescript": "^5.0.4",
     "unplugin-auto-import": "^0.15.2",
     "vite": "^4.2.1",
     "vite-plugin-eslint": "^1.8.1",
