ssr update, product page api

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 VITE_BACKEND_URL=https://shopcore.ru/store/api/
+VITE_ASSETS_URL=https://shopcore.ru/
+VITE_SHOP_ID=Khmelevskoy
+VITE_SHOP_AUTH_BOT=casesAuth_bot
