--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
     },
     "types": ["vite-plugin-svg-icons/client"]
   },
-  "include": ["src/vite-env.d.tsd.ts", "auto-imports.d.ts", "src/**/*"],
+  "include": ["src/vite-env.d.tsd.ts", "auto-imports.d.ts", "src/**/*", "renderer/**/*"],
   "references": [{ "path": "./tsconfig.config.json" }]
 }
