--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-telegram-auth": "^1.0.4",
+    "react-toastify": "^9.1.2",
     "swiper": "^9.2.0",
     "vite-plugin-ssr": "^0.4.111"
   },
