--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ofetch": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-photo-view": "^1.2.3",
     "react-redux": "^8.0.5",
     "react-router": "^6.10.0",
