--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fortnite-frontend",
   "private": true,
-  "version": "1.1.1",
+  "version": "1.2.0",
   "homepage": "./",
   "engines": {
     "node": ">=16.15.0"
@@ -20,39 +20,40 @@
   },
   "pre-commit": "lint",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "classnames": "^2.3.2",
-    "dayjs": "^1.11.7",
-    "js-cookie": "^3.0.1",
+    "dayjs": "^1.11.9",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
-    "ofetch": "^1.0.1",
+    "ofetch": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-photo-view": "^1.2.3",
-    "react-redux": "^8.0.5",
-    "react-router": "^6.10.0",
-    "react-router-dom": "^6.10.0",
+    "react-redux": "^8.1.1",
+    "react-router": "^6.14.1",
+    "react-router-dom": "^6.14.1",
     "react-telegram-auth": "^1.0.4",
-    "react-toastify": "^9.1.2",
+    "react-toastify": "^9.1.3",
     "swiper": "^9.2.3",
-    "vite-plugin-ssr": "^0.4.113"
+    "vite-plugin-ssr": "^0.4.133"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/js-cookie": "^3.0.3",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.35",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "@vitejs/plugin-react": "^3.1.0",
-    "@vitejs/plugin-react-swc": "^3.3.0",
+    "@types/react-redux": "^7.1.25",
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@vitejs/plugin-react": "^4.0.2",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
-    "eslint": "^8.38.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
@@ -61,17 +62,17 @@
     "express": "^4.18.2",
     "pre-commit": "^1.2.2",
     "prettier": "^2.8.7",
-    "rollup-plugin-visualizer": "^5.9.0",
-    "sass": "^1.62.0",
-    "stylelint": "^15.5.0",
-    "stylelint-config-standard-scss": "^8.0.0",
+    "rollup-plugin-visualizer": "^5.9.2",
+    "sass": "^1.63.6",
+    "stylelint": "^15.10.1",
+    "stylelint-config-standard-scss": "^10.0.0",
     "stylelint-order": "^6.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
-    "unplugin-auto-import": "^0.15.3",
-    "vite": "^4.2.1",
+    "typescript": "^5.1.6",
+    "unplugin-auto-import": "^0.16.6",
+    "vite": "^4.4.2",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-mkcert": "^1.14.0",
+    "vite-plugin-mkcert": "^1.16.0",
     "vite-plugin-singlefile": "^0.13.5",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-svg-loader": "^4.0.0"
