--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_URL=https://shopcore.ru/storev2/api/
+BACKEND_URL=https://shopcore.ru/storev2/api/
+BACKEND_OLD_URL=https://shopcore.ru/store/api/
