--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
     "classnames": "^2.3.2",
+    "cookies-next": "^4.0.0",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
-    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.1",
     "next": "^13.5.3",
