--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "nanoid": "^5.0.1",
     "next": "^13.5.3",
+    "nextjs-progressbar": "^0.0.16",
     "ofetch": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
