--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lint": "yarn lint:format && yarn lint:js:fix && yarn lint:style:fix"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.9.7",
+    "@uidotdev/usehooks": "^2.4.0",
     "classnames": "^2.3.2",
     "cookies-next": "^4.0.0",
     "dayjs": "^1.11.10",
@@ -28,8 +30,10 @@
     "ofetch": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-photo-view": "^1.2.3",
     "react-redux": "^8.1.3",
     "react-telegram-auth": "^1.0.4",
+    "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^9.1.3",
     "swiper": "^10.3.1"
   },
