--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-telegram-auth": "^1.0.4",
     "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^9.1.3",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "yet-another-react-lightbox": "^3.14.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.5.4",
